[gd_scene load_steps=5 format=2]

[ext_resource path="res://image/sweetie-16-8x.png" type="Texture" id=1]
[ext_resource path="res://wave/Wave.gd" type="Script" id=2]
[ext_resource path="res://sound/406084__deleted-user-4128231__bubblebeam.ogg" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 267, 4.5 )

[node name="Wave" type="Area2D"]
collision_mask = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 66.75, 1.625 )
texture = ExtResource( 1 )
hframes = 16
frame = 10
region_rect = Rect2( 0, 0, 10, 10 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 3.8147e-06, 4.76837e-07 )
scale = Vector2( 8.2, 0.5 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="area_entered" from="." to="." method="_on_Wave_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Wave_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
